# gpu-raytracer

./: .gitignore  CMakeLists.txt  Makefile  README  configure
src/: compute_light.cc  compute_light.hh  device.cc  device.cu  device.hh  json.hpp  kdtree.cc  kdtree.cu  kdtree.hh  kdtree_gpu.hh  light.cc  light.hh  main.cc  main.cu  material.hh  parse.cc  parse.hh  scene.hh  sphere_light.cc  sphere_light.hh  texture.cc  texture.hh  triangle.cu  triangle.hh  triangle_gpu.cu  triangle_gpu.hh  vector.cc  vector.hh  vector_gpu.hh
